header overflow for low res display fixed

--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ input::placeholder {
 .content-header {
   display: flex;
   width: 100%;
-  height: 5vh;
+  height: 40px;
   justify-content: space-between;
   color: #fff;
   padding: 8px;
